front-test/k8s_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: front
  name: frontservice
spec:
   ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: app-front
